assignment3-initial/target/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "' '", "'\t'", "'\b'", "'\f'", 
                     "'\r'", "'\n'", "<INVALID>", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'void'", "'while'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "WS", "BLANK", "TAB", "BACKSPACE", "FF", 
                      "CR", "NEWLINE", "COMMENT", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", 
                      "IF", "INTEGER", "RETURN", "STRING", "TRUE", "VOID", 
                      "WHILE", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", "LOG_NOT", 
                      "LOG_AND", "LOG_OR", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
                      "LESS_EQUAL_THAN", "GREATER_THAN", "GREATER_EQUAL_THAN", 
                      "SCOPE", "LP", "RP", "LS", "RS", "PERIOD", "COMMA", 
                      "SEMICOLON", "COLON", "LB", "RB", "ASSIGN", "INTLIT", 
                      "FLOATLIT", "STRINGLIT", "IDENTIFIER", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_program_decl = 1
    RULE_program_content = 2
    RULE_var_decl_short = 3
    RULE_var_part = 4
    RULE_var_recur = 5
    RULE_vardecl = 6
    RULE_idlist = 7
    RULE_init_list = 8
    RULE_arraylit = 9
    RULE_array_type = 10
    RULE_dimension = 11
    RULE_int_list = 12
    RULE_paramdecl = 13
    RULE_funcdecl = 14
    RULE_param_list = 15
    RULE_param_list_prime = 16
    RULE_func_call = 17
    RULE_relational_op = 18
    RULE_logical_op = 19
    RULE_adding_op = 20
    RULE_multiplying_op = 21
    RULE_indexop = 22
    RULE_exp_list = 23
    RULE_exp_list_prime = 24
    RULE_exp_prime = 25
    RULE_exp = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_exp7 = 33
    RULE_exp8 = 34
    RULE_assign_stmt = 35
    RULE_lhs = 36
    RULE_if_stmt = 37
    RULE_for_stmt = 38
    RULE_while_stmt = 39
    RULE_dowhile_stmt = 40
    RULE_break_stmt = 41
    RULE_cont_stmt = 42
    RULE_return_stmt = 43
    RULE_call_stmt = 44
    RULE_block_stmt = 45
    RULE_stmt_list = 46
    RULE_stmt_list_prime = 47
    RULE_stmt_content = 48
    RULE_stmt_list_content = 49
    RULE_stmt = 50
    RULE_boolit = 51
    RULE_atomic_typ = 52
    RULE_literal = 53

    ruleNames =  [ "program", "program_decl", "program_content", "var_decl_short", 
                   "var_part", "var_recur", "vardecl", "idlist", "init_list", 
                   "arraylit", "array_type", "dimension", "int_list", "paramdecl", 
                   "funcdecl", "param_list", "param_list_prime", "func_call", 
                   "relational_op", "logical_op", "adding_op", "multiplying_op", 
                   "indexop", "exp_list", "exp_list_prime", "exp_prime", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "assign_stmt", "lhs", "if_stmt", "for_stmt", 
                   "while_stmt", "dowhile_stmt", "break_stmt", "cont_stmt", 
                   "return_stmt", "call_stmt", "block_stmt", "stmt_list", 
                   "stmt_list_prime", "stmt_content", "stmt_list_content", 
                   "stmt", "boolit", "atomic_typ", "literal" ]

    EOF = Token.EOF
    WS=1
    BLANK=2
    TAB=3
    BACKSPACE=4
    FF=5
    CR=6
    NEWLINE=7
    COMMENT=8
    AUTO=9
    BREAK=10
    BOOLEAN=11
    DO=12
    ELSE=13
    FALSE=14
    FLOAT=15
    FOR=16
    FUNCTION=17
    IF=18
    INTEGER=19
    RETURN=20
    STRING=21
    TRUE=22
    VOID=23
    WHILE=24
    OUT=25
    CONTINUE=26
    OF=27
    INHERIT=28
    ARRAY=29
    ADDOP=30
    SUBOP=31
    MULOP=32
    DIVOP=33
    MODOP=34
    LOG_NOT=35
    LOG_AND=36
    LOG_OR=37
    EQUAL=38
    NOT_EQUAL=39
    LESS_THAN=40
    LESS_EQUAL_THAN=41
    GREATER_THAN=42
    GREATER_EQUAL_THAN=43
    SCOPE=44
    LP=45
    RP=46
    LS=47
    RS=48
    PERIOD=49
    COMMA=50
    SEMICOLON=51
    COLON=52
    LB=53
    RB=54
    ASSIGN=55
    INTLIT=56
    FLOATLIT=57
    STRINGLIT=58
    IDENTIFIER=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_decl(self):
            return self.getTypedRuleContext(MT22Parser.Program_declContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.program_decl()
            self.state = 109
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_content(self):
            return self.getTypedRuleContext(MT22Parser.Program_contentContext,0)


        def program_decl(self):
            return self.getTypedRuleContext(MT22Parser.Program_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_decl" ):
                return visitor.visitProgram_decl(self)
            else:
                return visitor.visitChildren(self)




    def program_decl(self):

        localctx = MT22Parser.Program_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_decl)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.program_content()
                self.state = 112
                self.program_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.program_content()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_content" ):
                return visitor.visitProgram_content(self)
            else:
                return visitor.visitChildren(self)




    def program_content(self):

        localctx = MT22Parser.Program_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program_content)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_shortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def atomic_typ(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl_short

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_short" ):
                return visitor.visitVar_decl_short(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_short(self):

        localctx = MT22Parser.Var_decl_shortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl_short)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.idlist()
            self.state = 122
            self.match(MT22Parser.COLON)
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 123
                self.atomic_typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 124
                self.array_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 125
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def atomic_typ(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_part" ):
                return visitor.visitVar_part(self)
            else:
                return visitor.visitChildren(self)




    def var_part(self):

        localctx = MT22Parser.Var_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MT22Parser.COLON)
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 129
                self.atomic_typ()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 130
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 131
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 134
            self.match(MT22Parser.ASSIGN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_recurContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def var_part(self):
            return self.getTypedRuleContext(MT22Parser.Var_partContext,0)


        def init_list(self):
            return self.getTypedRuleContext(MT22Parser.Init_listContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def var_recur(self):
            return self.getTypedRuleContext(MT22Parser.Var_recurContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_recur

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_recur" ):
                return visitor.visitVar_recur(self)
            else:
                return visitor.visitChildren(self)




    def var_recur(self):

        localctx = MT22Parser.Var_recurContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_recur)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MT22Parser.IDENTIFIER)
                self.state = 137
                self.var_part()
                self.state = 138
                self.init_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(MT22Parser.IDENTIFIER)
                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.var_recur()
                self.state = 143
                self.match(MT22Parser.COMMA)
                self.state = 144
                self.init_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def var_decl_short(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_shortContext,0)


        def var_recur(self):
            return self.getTypedRuleContext(MT22Parser.Var_recurContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 148
                self.var_decl_short()
                pass

            elif la_ == 2:
                self.state = 149
                self.var_recur()
                pass


            self.state = 152
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MT22Parser.IDENTIFIER)
                self.state = 155
                self.match(MT22Parser.COMMA)
                self.state = 156
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_init_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_list" ):
                return visitor.visitInit_list(self)
            else:
                return visitor.visitChildren(self)




    def init_list(self):

        localctx = MT22Parser.Init_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_init_list)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.arraylit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def exp_list(self):
            return self.getTypedRuleContext(MT22Parser.Exp_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MT22Parser.LB)
            self.state = 165
            self.exp_list()
            self.state = 166
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_typ(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MT22Parser.ARRAY)
            self.state = 169
            self.dimension()
            self.state = 170
            self.match(MT22Parser.OF)
            self.state = 171
            self.atomic_typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)
